-> Enh #1577: long workbook names will now have mouse-over text on the workbook list page -> Enh #1579: long worksheet names will now have mouse-over text on  worksheet tabs -> Attempt to resolve bug #1576, requires testing on a slower system than local dev (eg. mvm, test)

--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -55,7 +55,7 @@
             {% for worksheet in workbook.worksheets %}
                 {% if forloop.counter < 4 %}
                     <li class="{% if display_worksheet and display_worksheet.id == worksheet.id %} active {% elif not display_worksheet and forloop.counter == 1 %} active {% endif %}">
-                         <a href="#{{ worksheet.id }}" data-toggle="tab">{{ worksheet.name }}</a>
+                         <a href="#{{ worksheet.id }}" data-toggle="tab" title="{{ worksheet.name|wrap_text }}">{{ worksheet.name }}</a>
                          {% if workbook.owner.id == request.user.id %}
                          <div class="dropdown">
                              <a class="dropdown-toggle worksheet-drop" role="button" data-toggle="dropdown"><i class="fa fa-caret-down" ></i></a>
