- Added functionality to add and remove datasets and buckets to gcp - added to userdata_bootstrap to add "files" to projects

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -115,3 +115,12 @@
 
     i.fa-check
         color: $isb-success
+
+#gcp-detail
+    h1.page-header
+        text-transform: none
+
+    ul
+        list-style: none
+        li span.remove
+            float: right
