-> Axis labels for log-transformed axis values -> Log transform status is now always sent when requesting data

--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -97,10 +97,9 @@
                                 </div>
                             </div>
                         {% endfor %}
-<!--                        <label for="x-log-scale">
-                            <input id="x-log-scale" type="checkbox" class="log-scale"> Use log(x) for axis scale
+                        <label for="x-log-transform">
+                            <input id="x-log-transform" type="checkbox" class="log-scale"> Plot as log<sub>10</sub>(x+1)
                         </label>
--->
                     </div>
 
                     <!-- Swap selection -->
@@ -158,11 +157,9 @@
                                 </div>
                             </div>
                         {% endfor %}
-<!--
-                        <label for="y-log-scale">
-                            <input id="y-log-scale" type="checkbox" class="log-scale"> Use log(y) for axis scale
+                        <label for="y-log-transform">
+                            <input id="y-log-transform" type="checkbox" class="log-scale"> Plot as log<sub>10</sub>(y+1)
                         </label>
--->
                     </div>
 
                     <!-- Color By variable. only offer x and y selections-->
