Added bqdataset and bucket to upload process

--- a/templates/GenespotRE/gcp_detail.html
+++ b/templates/GenespotRE/gcp_detail.html
@@ -130,7 +130,7 @@
                                                     Are you sure you would like to unregister this bucket?
                                                 </p>
 
-                                                <input type="hidden" name="gcp_id" value="{{ project.project_id }}" />
+                                                <input type="hidden" name="gcp_id" value="{{ gcp.id }}" />
                                             </div>
                                             <div class="modal-footer">
                                                 <input type="submit" value="Unregister" class="btn btn-primary" />
