-> Axis will not add units if they aren't available; for log it will just list 'n'

--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -98,7 +98,7 @@
                             </div>
                         {% endfor %}
                         <label for="x-log-transform">
-                            <input id="x-log-transform" type="checkbox" class="log-scale"> Plot as log<sub>10</sub>(x+1)
+                            <input id="x-log-transform" type="checkbox" class="log-scale"> Plot as log<sub>10</sub>(n+1)
                         </label>
                     </div>
 
@@ -158,7 +158,7 @@
                             </div>
                         {% endfor %}
                         <label for="y-log-transform">
-                            <input id="y-log-transform" type="checkbox" class="log-scale"> Plot as log<sub>10</sub>(y+1)
+                            <input id="y-log-transform" type="checkbox" class="log-scale"> Plot as log<sub>10</sub>(n+1)
                         </label>
                     </div>
 
