-> Handling unexpected negatives in the log transform gracefully

--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -77,13 +77,13 @@
 
                         {# Selection of specific attributes of a gene if it is selected in the dropdown above #}
                         {% for type in datatype_list %}
-                            <div style="display:none" class="{{ type.datatype }} attr-options form-group search-field">
+                            <div style="display: none;" class="{{ type.datatype }} attr-options form-group search-field">
                                 <div class="search-term" data-field="{{ type.datatype }}">
                                     {% for field in type.fields %}
                                         <label for="{{ field.label }}-{{ type.datatype }}" class="space-top-15">{{ field.label }} Filter</label>
                                         <select id="{{ field.label }}-{{ type.datatype }}" class="form-control field-options {{ field.name }}-options {% if not field.static %}select2{% endif %}" data-field="{{ field.name }}">
                                             {% if field.static %}
-                                                <option value="" disabled selected>Please select an option</option>
+                                                <option value="" disabled selected type="label">Please select an option</option>
                                                 {% for value in field.values %}
                                                     <option value="{{ value }}">{{ value }}</option>
                                                 {% endfor %}
@@ -143,7 +143,7 @@
                                         <label for="{{ field.label }}" class="space-top-15">{{ field.label }} Filter</label>
                                         <select id="{{ field.label }}" class="form-control field-options {{ field.name }}-options {% if not field.static %}select2{% endif %}" data-field="{{ field.name }}">
                                             {% if field.static %}
-                                                <option value="" disabled selected>Please select an option</option>
+                                                <option value="" disabled selected type="label">Please select an option</option>
                                                 {% for value in field.values %}
                                                     <option value="{{ value }}">{{ value }}</option>
                                                 {% endfor %}
