--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -81,8 +81,8 @@
             </div>
             <div class="modal-body">
                 <p>
-                    This will create a copy of the worksheet and reference the cohorts and projects used in the workbook
-                    This will not make duplicates of the cohort and projects used in the workbook
+                    This will create a copy of the worksheet and reference the cohorts, variables, and gene lists used in the workbook
+                    This will not make duplicates of the cohort, variables, and gene lists used in the workbook
                 </p>
             </div>
             <form id="copy-workbook-{{ workbook.id }}" method="POST" action="{% url 'workbook_copy' workbook.id %}">
