--- a/templates/GenespotRE/user_gcp_list.html
+++ b/templates/GenespotRE/user_gcp_list.html
@@ -62,7 +62,7 @@
                                         </ul>
                                         </div>
                                     </td>
-                                    <td>{{ project.project_name }}</td>
+                                    <td>{{ project.project_name }} <a href="https://console.cloud.google.com/home/dashboard?project={{ project.project_name }}"><i class="fa fa-external-link"></i></a></td>
                                     <td>{{ project.project_id }}</td>
 {#                                    <td>{% if project.big_query_dataset %}{{ project.big_query_dataset }}{% else %}N/A{% endif %}</td>#}
 
