--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="form-group">
                         <label for="project-description">Project Description (Optional)</label>
-                        <textarea class="form-control" name="project-description" id="project-description" cols="30" rows="5"></textarea>
+                        <textarea class="form-control" name="project-description" id="project-description" cols="30" rows="5" maxlength="2048"></textarea>
                     </div>
                 </section>
                 <section>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="form-group">
                         <label for="study-description">Study Description (Optional)</label>
-                        <textarea class="form-control" name="study-description" id="study-description" cols="30" rows="5"></textarea>
+                        <textarea class="form-control" name="study-description" id="study-description" cols="30" rows="5" maxlength="2048"></textarea>
                     </div>
                 </section>
                 <section id="data-upload-group">
