--- a/templates/GenespotRE/gcp_detail.html
+++ b/templates/GenespotRE/gcp_detail.html
@@ -82,7 +82,7 @@
                                                 <p>
                                                     <em>Note</em>: By refreshing this Service Account, you are extending its access to the specified dataset.
                                                 </p>
-                                                <input type="hidden" name="gcp_id" value="{{ project.project_id }}" />
+                                                <input type="hidden" name="gcp_id" value="{{ gcp.project_id }}" />
                                                 <input type="hidden" name="user_sa" value="{{ service_account.service_account }}" />
                                                 <input type="hidden" name="datasets" value="{{ service_account.authorized_dataset_id }}" />
                                             </div>
