-> Plots should no longer cause the page to become over-large

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -3,6 +3,10 @@
   overflow: hidden
   margin: 0 -10px -5px -10px
 
+  .panel.plot
+    box-shadow: none
+    margin: 0
+
   .fly-out
     position: absolute
     visibility: hidden
