-> Cubby Plot y-axis labels will now textwrap to avoid overlap - this is an experimental implementation to check how it works for other plots and axes -> Fixing #1489: workbook page elongation with long y-axis -> Fixing #1490: badly-placed axis labels, also the labels will be slightly bolded and larger than axis value text ->

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -3,6 +3,18 @@
   overflow: hidden
   margin: 0 -10px -5px -10px
 
+  .axis-label
+    font-weight: 500
+    font-size: 1.1em
+
+  .plot-div
+    foreignObject
+      div
+        overflow: hidden
+        text-overflow: ellipsis
+        padding: 5px 5px 5px 5px
+        line-height: 1.25
+
   .panel.plot
     box-shadow: none
     margin: 0
