-> Scrollbar for the plot container for plot areas which go outside it

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -7,6 +7,10 @@
     font-weight: 500
     font-size: 1.1em
 
+  .plot-container
+    overflow-x: hidden
+    overflow-y: auto
+
   .plot-div
     foreignObject
       div
@@ -14,6 +18,7 @@
         text-overflow: ellipsis
         padding: 5px 5px 5px 5px
         line-height: 1.25
+        max-height: 100%
 
   .panel.plot
     box-shadow: none
