plot div height css changes

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -3,6 +3,9 @@
   overflow: hidden
   margin: 0 -10px -5px -10px
 
+  .worksheet-panel-body
+    overflow: scroll
+
   .axis-label
     font-weight: 500
     font-size: 1.1em
