plot div height css changes

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -6,6 +6,10 @@
   .worksheet-panel-body
     overflow: scroll
 
+  .panel.plot
+    box-shadow: none
+    margin: 0
+
   .axis-label
     font-weight: 500
     font-size: 1.1em
