--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -4,7 +4,8 @@
   margin: 0 -10px -5px -10px
 
   .worksheet-panel-body
-    overflow: scroll
+    overflow-y: scroll
+    overflow-x: hidden
 
   .panel.plot
     box-shadow: none
