-> Resizing the plots to accommodate legends

--- a/blink_sass/pages/_visualizations.sass
+++ b/blink_sass/pages/_visualizations.sass
@@ -4,6 +4,22 @@
 
 .worksheet-panel-body
 
+  .axis-label
+    font-weight: 500
+    font-size: 1.1em
+
+  .plot-div
+    overflow-x: hidden
+    overflow-y: auto
+    padding-right: 25px
+    foreignObject
+      div
+        overflow: hidden
+        text-overflow: ellipsis
+        padding: 5px 5px 5px 5px
+        line-height: 1.25
+        max-height: 100%
+
     .axis path, .axis line
         fill: none
         stroke: #000
@@ -50,16 +66,21 @@
                 word-wrap: break-word
                 word-break: break-word
 
-    .legend
-        display: inline-block
-        margin: 20px
-        overflow-y: auto
-        max-height: 650px
-        vertical-align: top
-        .unselected
-            fill-opacity: 0
+  .legend
+      display: inline-block
+      padding: 15px 0px 0px 15px
+      overflow-y: auto
+      max-height: 150px
+      vertical-align: top
+      .unselected
+          fill-opacity: 0
 
 // Plot selector styles
+
+.panel.plot
+  box-shadow: none
+  margin: 0
+
 .plot .panel-heading
     a.toggle-selection
         color: $isb-dark
