-> Remove extra call to metadata_counts when loading a new cohort

--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -546,7 +546,7 @@
     var base_api_url = '{{ base_api_url|safe }}';
     var cohort_id = {{ cohort.id }};
     var metadata_counts = {{ metadata_counts|tojson|safe }};
-    var molecular_attr = {{ molecular_attr|tojson|safe }};
+    var metadata_filters = {{ metadata_filters|tojson|safe }};
     </script>
 {% endblock %}
 
