Added system data dictionary page

--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -66,7 +66,7 @@
                 <section id="data-upload-group">
                     <div class="form-group">
                         <label>Data Upload</label>
-                        <p>Please refer to the <a href="">system data dictionary</a> for proper naming and data type conventions.</p>
+                        <p>Please refer to the <a href="{% url 'system_data_dict' %}" target="_blank">system data dictionary <i class="fa fa-share-square-o"></i></a> for proper naming and data type conventions.</p>
                         <div class="checkbox">
                             <label>
                                 <input class="data-radio" type="radio" name="data" checked value="high"> High level data files
