--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -148,7 +148,7 @@
             </select>
 
             <hr>
-            <p>Please refer to the <a href="">system data dictionary</a> for proper naming and data type conventions.</p>
+            <p>Please refer to the <a href="{% url 'system_data_dict' %}" target="_blank">system data dictionary <i class="fa fa-share-square-o"></i></a> for proper naming and data type conventions.</p>
         </div>
         <div class="panel-footer">
             <button class="btn btn-primary" id="back-button"><i class="fa fa-chevron-left"></i> Back</button>
