--- a/templates/projects/project_modals.html
+++ b/templates/projects/project_modals.html
@@ -119,6 +119,9 @@
                                     <td>
                                         {{shared.email}}
                                     </td>
+                                    <td>
+                                        <a class="remove-shared-user" role="button" data-shared-id="{{ shared.id }}"><i class="fa fa-times"></i></a>
+                                    </td>
                                 </tr>
                             {% endfor %}
                             </tbody>
