-> Scatterplot zoom/selection changes made in line with BarGraph and Histogram

--- a/blink_sass/pages/_visualizations.sass
+++ b/blink_sass/pages/_visualizations.sass
@@ -4,6 +4,9 @@
 
 .worksheet-panel-body
 
+  .extent
+    fill: rgba(40, 130, 50, 0.5)
+
   .axis-label, .axis-label-container div
     font-weight: 500
     font-size: 1.1em
