-> Adding user data tab to the filter panel on the cohort creation/editing page; this results in a site-wide widening of the container element, to 1280px total.

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -28,7 +28,8 @@
                 border: none
                 background-color: #fff
                 text-align: center
-                width: (100% / 3)
+                width: (100% / 4)
+                font-size: 12.7px
                 &:first-child a
                     border-top-left-radius: 3px
                 &:last-child a
