--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -96,6 +96,7 @@
                 <li role="presentation" class="active"><a href="#clinical-filters" role="tab" data-toggle="tab" title="Donor Filters">Donor</a></li>
                 <li role="presentation" class=""><a href="#data-filters" role="tab" data-toggle="tab" title="Data Type Filters">Data Type</a></li>
                 <li role="presentation" class=""><a href="#molecular-filters" role="tab" data-toggle="tab" title="Molecular Filters">Molecular</a></li>
+                <li role="presentation" class=""><a href="#user-data-filters" role="tab" data-toggle="tab" title="User Data">User Data</a></li>
             </ul>
             <div class="tab-content">
                 <!-- donor filters tab -->
@@ -268,6 +269,35 @@
                                 </ul>
                             </div>
                         </li>
+                    </ul>
+                </div>
+                <!-- user data filters tab -->
+                <div role="tabpanel" class="tab-pane" id="user-data-filters">
+                    <ul class="list-group" id="data-type-accordion" role="tablist" aria-multiselectable="true">
+                        {% for attr in user_data %}
+                            <li class="list-group-item">
+                                <div class="list-group-item__heading" role="tab" id="heading-{{ attr.id }}">
+                                    <a role="button" data-toggle="collapse" data-parent="#data-type-accordion" href="#collapse-{{ attr.id }}"
+                                       aria-expanded="false" aria-controls="collapse-{{ attr.id }}">
+                                        <i class="fa fa-caret-right"></i><i class="fa fa-caret-down" style="display:none;"></i> {{ attr.name }}
+                                    </a>
+                                </div>
+                                <div id="collapse-{{ attr.id }}" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel"
+                                     aria-labelledby="heading-{{ attr.id }}" data-feature-name="{{ attr.id }}" data-feature-displ-name="{{ attr.name }}" data-feature-type="datatype">
+                                    <ul class="search-checkbox-list" id="{{ attr.id }}">
+                                        {% for v in attr.values %}
+                                            <li class="checkbox">
+                                                <label>
+                                                    <input type="checkbox" name="elements-selected" data-value-name="{{ v.id }}"
+                                                           data-value-displ-name="{% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_name }}{% else %}{{ v.value }}{% endif %}">
+                                                    {% if v.value == 'None' %}NA{% else %}{{ v.value }}{% endif %} <span class="count">({{ v.count }})</span>
+                                                </label>
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
@@ -545,6 +575,7 @@
     var base_url = '{{ base_url|safe }}';
     var base_api_url = '{{ base_api_url|safe }}';
     var cohort_id = {{ cohort.id }};
+    var user_data = {{ user_data|tojson|safe }};
     var metadata_counts = {{ metadata_counts|tojson|safe }};
     var metadata_filters = {{ metadata_filters|tojson|safe }};
     </script>
