--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -283,8 +283,8 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="{% url 'variables' %}">Manage Variables Favorite ( {{ user.variablefavorite_set.all|active|length }} )</a></li>
-                    <li class="menu-item"><a href="{% url 'variable_fav_create' %}">Create Favorite Variable(s)</a></li>
+                    <li class="menu-item"><a href="{% url 'variables' %}">Manage Favorite Variable(s) Lists ( {{ user.variablefavorite_set.all|active|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'variable_fav_create' %}">Create Favorite Variable(s) List</a></li>
                     <li class="menu-item"><a href="{% url 'variable_select_for_new_workbook' %}">Select Variables for a New Workbook</a></li>
                 </ul>
             </li>
