--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -81,7 +81,7 @@
                     <li>
                         <a href="{% url 'workbook_detail' workbook.id %}" title="{{ workbook.name|title|wrap_text }}">
                             <div class="list-main">
-                                <h5 class="list-title">{{ workbook.name|title }}</h5>
+                                <h5 class="list-title">{{ workbook.name }}</h5>
                                 <p>{{ workbook.description }}</p>
                             </div>
                             <div class="list-info">
