-> new_cohort and cohort_details are now effectively the same template which import the user data and isb-cgc data sub-templates

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -33,7 +33,7 @@
         &-data, &-ud-filters
             li
                 width: (100% / 2)
-    #isb-cgc-filter-panel, #user-data-filter-panel
+    .filter-panel
         .heading-note
             font-style: italic
             color: darken($isb-warning, 20%)
@@ -133,7 +133,7 @@
                 margin: auto
                 font-size: 100px
 
-        #tree-graph-clinical .tree-graph
+        .tree-graph-clinical .tree-graph
             display: inline-block
             margin: 0px 14px 10px 14px
             width: 151px
@@ -141,7 +141,7 @@
             .graph-title
                 text-align: center
 
-        #more-graphs, #less-graphs
+        .more-graphs, .less-graphs
             width: 100%
             height: 36px
             position: relative
