--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="row">
-        <div class="tab-content">
+        <div class="tab-content data-tab-content">
             {% include "cohorts/isb-cgc-data.html" %}
             {% include "cohorts/user-data.html" %}
         </div>
