--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -1,5 +1,5 @@
-        <div id="isb-cgc-data" class="tab-pane active" role="tabpanel">
-            <div id="isb-cgc-filter-panel" class="col-lg-4" role="tabpanel">
+        <div id="isb-cgc-data" class="tab-pane active data-tab" role="tabpanel">
+            <div id="isb-cgc-data-filter-panel" class="col-lg-4 filter-panel" role="tabpanel" {% if cohort.id %}style="display:none;"{% endif %}>
                 <div class="tabpanel" role="tabpanel">
                     <ul class="nav nav-tabs nav-tabs-filters" role="tablist">
                         <li role="presentation" class="active"><a href="#clinical-filters" role="tab" data-toggle="tab" title="Donor Filters">Donor</a></li>
@@ -184,55 +184,68 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-8">
-            <div class="selected-filters panel panel-default">
-                <div class="panel-heading clearfix">
-                    <h4 class="panel-title pull-left">Selected Filters</h4>
-                    <a class="pull-right" role="button" id="clear-filters">Clear All</a>
-                </div>
-                <div class="panel-body">
-
-                </div>
-            </div>
-
-            <div class="cohort-info panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">Details</h4>
-                </div>
-                <div class="panel-body">
-                    <div class="row col-md-6">
-                        <span class="detail-label">Total Number of Samples:</span>
-                        <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                        <span class="total-values" id="total-samples">TBD</span>
+            <div class="{% if cohort.id %}col-md-12{% else %}col-lg-8{% endif %} data-tab-content-panel">
+                <div class="selected-filters isb-cgc-data-selected-filters panel panel-default">
+                    <div class="panel-heading clearfix">
+                        <h4 class="panel-title pull-left">{% if cohort.id %}New Filters{% else %}Selected Filters{% endif %}</h4>
+                        <a class="pull-right clear-filters" role="button" id="isb-cgc-data-clear-filters">Clear All</a>
                     </div>
-                    <div class="row col-md-6">
-                        <span class="detail-label">Total Number of Participants:</span>
-                        <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                        <span class="total-values" id="total-participants">TBD</span>
+                    <div class="panel-body">
+
                     </div>
                 </div>
-            </div>
+                    {% if cohort.id %}
+                        <div class="cohort-selected-filters panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">Current Filters</h4>
+                            </div>
+                            <div class="panel-body">
+                                {% for filter in cohort.get_current_filters %}
+                                    <span class="filter-label label label-default space-right-5">{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
+                                {% empty %}
+                                    <p>No filters have been applied to this cohort.</p>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
+                <div class="cohort-info panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">Details</h4>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row col-md-6">
+                            <span class="detail-label">Total Number of Samples:</span>
+                            <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
+                            <span class="total-values" id="isb-cgc-data-total-samples">TBD</span>
+                        </div>
+                        <div class="row col-md-6">
+                            <span class="detail-label">Total Number of Participants:</span>
+                            <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
+                            <span class="total-values" id="isb-cgc-data-total-participants">TBD</span>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="clinical-trees panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">Clinical Features</h4>
+                <div class="clinical-trees panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">Clinical Features</h4>
+                    </div>
+                    <div class="panel-body">
+                        <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
+                        <div id="isb-cgc-tree-graph-clinical" class="tree-graph-clinical"></div>
+                    </div>
+                    <div class="more-graphs"><button class="btn btn-link" role="button">Show More</button></div>
+                    <div class="less-graphs" style="display: none;"><button class="btn btn-link" role="button">Show Less</button></div>
                 </div>
-                <div class="panel-body">
-                    <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                    <div id="tree-graph-clinical"></div>
-                </div>
-                <div id="more-graphs"><button class="btn btn-link" role="button">Show More</button></div>
-                <div id="less-graphs" style="display: none;"><button class="btn btn-link" role="button">Show Less</button></div>
-            </div>
 
-            <div class="parallel-sets panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">Public Data Availability</h4>
-                </div>
-                <div class="panel-body">
-                    <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                    <div id="multi-categorical"></div>
+                <div class="parallel-sets panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">Public Data Availability</h4>
+                    </div>
+                    <div class="panel-body">
+                        <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
+                        <div id="multi-categorical"></div>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
