--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -1,9 +1,9 @@
-<div id="user-data" class="tab-pane" role="tabpanel">
-    <div id="user-data-filter-panel" class="col-lg-4" role="tabpanel">
+<div id="user-data" class="tab-pane data-tab" role="tabpanel">
+    <div id="user-data-filter-panel" class="col-lg-4 filter-panel" role="tabpanel" {% if cohort.id %}style="display:none;"{% endif %}>
         <div class="tabpanel" role="tabpanel">
             <ul class="nav nav-tabs nav-tabs-ud-filters" role="tablist">
-                <li role="presentation" class="active"><a href="#ud-proj-study-filters" role="tab" data-toggle="tab" title="Donor Filters">Projects & Studies</a></li>
-                <li role="presentation" class=""><a href="#ud-feature-filters" role="tab" data-toggle="tab" title="Donor Filters">Features</a></li>
+                <li role="presentation" class="active"><a href="#ud-proj-study-filters" role="tab" data-toggle="tab" title="User Data Projects & Studies">Projects & Studies</a></li>
+                <li role="presentation" class=""><a href="#ud-feature-filters" role="tab" data-toggle="tab" title="User Data Features">Features</a></li>
             </ul>
             <div class="tab-content">
                 <!-- user data projects & studies filters tab -->
@@ -86,17 +86,30 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-8">
-        <div class="selected-filters panel panel-default">
+    <div class="{% if cohort.id %}col-md-12{% else %}col-lg-8{% endif %} data-tab-content-panel">
+        <div class="selected-filters user-data-selected-filters panel panel-default">
             <div class="panel-heading clearfix">
-                <h4 class="panel-title pull-left">Selected Filters</h4>
-                <a class="pull-right" role="button" id="clear-filters">Clear All</a>
+                <h4 class="panel-title pull-left">{% if cohort.id %}New Filters{% else %}Selected Filters{% endif %}</h4>
+                <a class="pull-right clear-filters" role="button" id="user-data-clear-filters">Clear All</a>
             </div>
             <div class="panel-body">
 
             </div>
         </div>
-
+        {% if cohort.id %}
+            <div class="cohort-selected-filters panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Current Filters</h4>
+                </div>
+                <div class="panel-body">
+                    {% for filter in cohort.get_current_filters %}
+                        <span class="filter-label label label-default space-right-5">{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
+                    {% empty %}
+                        <p>No filters have been applied to this cohort.</p>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
         <div class="cohort-info panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">Details</h4>
@@ -105,12 +118,12 @@
                 <div class="row col-md-6">
                     <span class="detail-label">Total Number of Samples:</span>
                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                    <span class="total-values" id="total-samples">TBD</span>
+                    <span class="total-values" id="user-data-total-samples">TBD</span>
                 </div>
                 <div class="row col-md-6">
                     <span class="detail-label">Total Number of Participants:</span>
                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                    <span class="total-values" id="total-participants">TBD</span>
+                    <span class="total-values" id="user-data-total-participants">TBD</span>
                 </div>
             </div>
         </div>
@@ -121,10 +134,10 @@
             </div>
             <div class="panel-body">
                 <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                <div id="tree-graph-clinical"></div>
+                <div id="user-data-tree-graph-clinical" class="tree-graph-clinical"></div>
             </div>
-            <div id="more-graphs"><button class="btn btn-link" role="button">Show More</button></div>
-            <div id="less-graphs" style="display: none;"><button class="btn btn-link" role="button">Show Less</button></div>
+            <div id="user-data-more-graphs" class="more-graphs"><button class="btn btn-link" role="button">Show More</button></div>
+            <div id="user-data-less-graphs" class="less-graphs" style="display: none;"><button class="btn btn-link" role="button">Show Less</button></div>
         </div>
     </div>
 </div>
